Fix hover of content of technicalskills on mobile

--- a/src/components/TechnichalSkills.module.css
+++ b/src/components/TechnichalSkills.module.css
@@ -93,6 +93,6 @@
   }
 
   .content:hover {
-    background-color: unset;
+    background-color: var(--gray);
   }
 }
